swagger CRUD currently working
