# swagger/index.js
@@ -5,9 +5,8 @@ const app = express();
 const swaggerUi = require('swagger-ui-express');
 const swaggerFile = require('./swagger-output.json');
 
-app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile));
-
 app
+  .use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerFile))
   .use(cors())
   .use(express.json())
   .use(express.urlencoded({ extended: true }))
